openshift-templates/istio-networking/gateway-customer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: customer
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "customer.store.com" # Exposed Gateway domain name
