openshift-templates/istio-networking/destination-rule-customer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer
spec:
  host: customer
