openshift-templates/istio-networking/destination-rule-preference.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: preference
spec:
  host: preference
